# octoctl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/octoctl/: cli.py
src/octoctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/: octoctl_entry.py  octopus_manager_entry.py
