[project]
name = "octoctl"
version = "0.1.0"
description = "Local manager control CLI for OctopusOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
octoctl = "octoctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

