[project]
name = "octoctl"
version = "3.5.0"
description = "Local manager control CLI for OctopusOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/octopusos/octoctl"
Repository = "https://github.com/octopusos/octoctl"
Issues = "https://github.com/octopusos/octoctl/issues"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
octoctl = "octoctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
